compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_possible_modules_1.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport module\npub fn main() {\n    one\n}\n"
---
----- SOURCE CODE
-- module.gleam
pub const one = 1

-- main.gleam

import module
pub fn main() {
    one
}


----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:4:5
  │
4 │     one
  │     ^^^

The name `one` is not in scope here.
Did you mean one of these:

  - module.one
