compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_possible_modules_10.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport module\npub fn main() {\n    1 |> add(2)\n}\n"
---
----- SOURCE CODE
-- module.gleam

pub fn add(x: Int, y: Int) {
    x + y
}


-- main.gleam

import module
pub fn main() {
    1 |> add(2)
}


----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:4:10
  │
4 │     1 |> add(2)
  │          ^^^

The name `add` is not in scope here.
Did you mean one of these:

  - module.add
