compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_possible_modules_17.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport module\npub fn main() {\n    add(1, 1)\n}"
---
----- SOURCE CODE
-- module.gleam

@internal
pub fn add(x: Int, y: Int) {
    x + y
}

-- main.gleam

import module
pub fn main() {
    add(1, 1)
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:4:5
  │
4 │     add(1, 1)
  │     ^^^

The name `add` is not in scope here.
