compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_possible_modules_3.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport module\npub fn main() {\n    add(1, 1)\n}\n"
---
----- SOURCE CODE
-- module.gleam
pub fn add(x: Int) { x + 1 }

-- main.gleam

import module
pub fn main() {
    add(1, 1)
}


----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:4:5
  │
4 │     add(1, 1)
  │     ^^^

The name `add` is not in scope here.
